--- a/.travis.yml
+++ b/.travis.yml
@@ -5,4 +5,6 @@ python:
 install: 
   - pip install tornado --use-mirrors
   - pip install argparse --use-mirrors
+  - pip install flask --use-mirrors
+  - pip install sqlalchemy --use-mirrors
 script: nosetests
