--- a/.travis.yml
+++ b/.travis.yml
@@ -10,4 +10,5 @@ install:
   - pip install boto --use-mirrors
   - pip install moto --use-mirrors
   - pip install ordereddict --use-mirrors
-script: nosetests -v
+  - pip install whoops --use-mirrors
+script: nosetests -v --with-doctest
