--- a/debian/control
+++ b/debian/control
@@ -7,6 +7,7 @@ Build-Depends:	debhelper (>= 7),
 		python-argparse,
 		python-pip,
 		python-pyparsing,
+		python-sqlalchemy,
 		python-simplejson,
 		python-tornado (>= 2.3),
 		python-mock,
