--- a/.travis.yml
+++ b/.travis.yml
@@ -38,7 +38,7 @@ before_script:
   - cat ~/.ssh/id_rsa.pub >> ~/.ssh/authorized_keys
   - ssh -o StrictHostKeyChecking=no localhost true
 
-  - mysql -e 'create database luigi_test;'
+  - mysql -e 'create database IF NOT EXISTS luigi_test;' -uroot
 
 script:
   - tox
