Changing mysql driver for consistency.

--- a/tox.ini
+++ b/tox.ini
@@ -1,6 +1,7 @@
 [tox]
 envlist = py{26,27,33,34}-{cdh,hdp,nonhdfs}, docs, pep8
 skipsdist = True
+install_command = pip install {opts} --allow-external mysql-connector-python {packages}
 
 [testenv]
 usedevelop = True
