--- a/tox.ini
+++ b/tox.ini
@@ -20,10 +20,20 @@ setenv =
   LUIGI_CONFIG_PATH={toxinidir}/test/testconfig/client.cfg
   COVERAGE_PROCESS_START={toxinidir}/.coveragerc
   FULL_COVERAGE=true
+
+  # Workaround for some Travis crap
+  # https://github.com/spotify/luigi/issues/953
+  JAVA_HOME=/usr/lib/jvm/java-7-oracle
+
 commands =
   cdh,hdp: {toxinidir}/scripts/ci/setup_hadoop_env.sh
   python --version
+
+  # Various stuff related to java version debugging
   env
+  find /usr/lib/jvm -maxdepth 2
+  readlink /usr/bin/java
+
   coverage run test/runtests.py -v {posargs:}
   coverage combine
   coveralls
