Update packages with new mysql package

--- a/tox.ini
+++ b/tox.ini
@@ -4,7 +4,7 @@ skipsdist = True
 
 [testenv]
 usedevelop = True
-install_command = pip install {opts} mysql-connector-repackaged {packages}
+install_command = pip install {opts} {packages}
 deps=
   -r{toxinidir}/test/requirements.txt
   coverage>=3.6,<3.999
