updated luigi.util.previous to support year and month parameters

--- a/tox.ini
+++ b/tox.ini
@@ -6,6 +6,7 @@ skipsdist = True
 usedevelop = True
 install_command = pip install {opts} {packages}
 deps=
+  dateutils<=2.5.3
   mock<2.0
   moto<1.0
   HTTPretty==0.8.10
