tox: Remove all code coverage tools
I removed "coverage" and "codecov" (I don't even know their difference).
At the moment I want to minimize the cruft. Also the output is smaller
and less verbose when our first-time-users test their code with tox.

I wasn't sure what "sitecustomize.py" is, but the less magic the better
for now. Given that nobody currently have strong ownership over luigi,
it's better to strip the project to a manageable size.

--- a/tox.ini
+++ b/tox.ini
@@ -20,8 +20,6 @@ deps=
   cdh,hdp: hdfs>=2.0.4,<3.0.0
   postgres: psycopg2<3.0
   gcloud: google-api-python-client>=1.4.0,<2.0
-  coverage>=3.6,<3.999
-  codecov>=1.4.0
   requests<3.0
   unixsocket: requests-unixsocket<1.0
   pygments
@@ -41,17 +39,13 @@ setenv =
   nonhdfs: NOSE_EVAL_ATTR=not minicluster and not gcloud and not postgres and not unixsocket
   unixsocket: NOSE_ATTR=unixsocket
   LUIGI_CONFIG_PATH={toxinidir}/test/testconfig/luigi.cfg
-  COVERAGE_PROCESS_START={toxinidir}/.coveragerc
-  FULL_COVERAGE=true
   nonhdfs: NOSE_WITH_DOCTEST=1
 commands =
   cdh,hdp: {toxinidir}/scripts/ci/setup_hadoop_env.sh
   python --version
-  coverage run test/runtests.py -v --ignore-files='(^\.|^_|^setup\.py$)' \
-                                   --ignore-files=not_imported.py \
-                                   {posargs:}
-  coverage combine
-  codecov -e TOXENV
+  python test/runtests.py -v --ignore-files='(^\.|^_|^setup\.py$)' \
+                             --ignore-files=not_imported.py \
+                             {posargs:}
 
 [testenv:visualiser]
 usedevelop = True
