Fixed versions of pandas and tables in dependencies

--- a/tox.ini
+++ b/tox.ini
@@ -12,8 +12,8 @@ deps=
   nose<2.0
   unittest2<2.0
   boto<3.0
-  pandas==0.18.0
-  tables
+  pandas>=0.13.0
+  tables<=4.0
   sqlalchemy<2.0
   elasticsearch<2.0.0
   psutil<4.0
