--- a/.travis.yml
+++ b/.travis.yml
@@ -15,18 +15,21 @@ env:
   matrix:
     - TOXENV=flake8
     - TOXENV=docs
-    - TOXENV=py27-nonhdfs
-    - TOXENV=py33-nonhdfs
-    - TOXENV=py34-nonhdfs
-    - TOXENV=py27-unixsocket
-    - TOXENV=py33-unixsocket
-    - TOXENV=py34-unixsocket
-    - TOXENV=py27-cdh
-    - TOXENV=py33-cdh
-    - TOXENV=py34-cdh
-    - TOXENV=pypy-scheduler
-    - TOXENV=py27-gcloud
-    - TOXENV=py27-postgres
+#    - TOXENV=py27-nonhdfs
+#    - TOXENV=py33-nonhdfs
+#    - TOXENV=py34-nonhdfs
+#    - TOXENV=py27-unixsocket
+#    - TOXENV=py33-unixsocket
+#    - TOXENV=py34-unixsocket
+#    - TOXENV=py27-cdh
+#    - TOXENV=py33-cdh
+#    - TOXENV=py34-cdh
+#    - TOXENV=pypy-scheduler
+#    - TOXENV=py27-gcloud
+#    - TOXENV=py27-postgres
+    - TOXENV=py27-hdf5
+    - TOXENV=py33-hdf5
+    - TOXENV=py34-hdf5
       # - TOXENV=visualiser
       # Disabling this test because of intermittent failures :-/
 
@@ -34,14 +37,23 @@ env:
 # https://github.com/travis-ci/travis-ci/issues/4794#issuecomment-143758799
 matrix:
   include:
+#    - python: 3.5
+#      env: TOXENV=py35-nonhdfs
+#    - python: 3.5
+#      env: TOXENV=py35-unixsocket
+#    - python: 3.5
+#      env: TOXENV=py35-cdh
     - python: 3.5
-      env: TOXENV=py35-nonhdfs
-    - python: 3.5
-      env: TOXENV=py35-unixsocket
-    - python: 3.5
-      env: TOXENV=py35-cdh
+      env: TOXENV=py35-hdf5
 
 sudo: false
+
+addons:
+  apt:
+    packages:
+    - libhdf5-serial-dev
+    - libbz2-dev
+    - liblzo2-dev
 
 cache:
   directories:
@@ -51,6 +63,7 @@ install:
   - pip install 'tox<3.0'
 
 before_install:
+  - apt-get install libhdf5-serial-dev
   - openssl aes-256-cbc -K $encrypted_e05f6ccc270e_key -iv $encrypted_e05f6ccc270e_iv -in test/gcloud-credentials.json.enc -out test/gcloud-credentials.json -d
     || export DIDNT_CREATE_GCP_CREDS=1
 
@@ -73,3 +86,4 @@ script:
 branches:
   only:
     - master
+    - travisbuild
