--- a/tox.ini
+++ b/tox.ini
@@ -1,5 +1,5 @@
 [tox]
-envlist = py{27,33,34,35}-{cdh,hdp,nonhdfs,gcloud,postgres,unixsocket}, visualiser, pypy-scheduler, docs, flake8
+envlist = py{27,33,34,35}-{cdh,hdp,nonhdfs,gcloud,postgres,unixsocket,hdf5}, visualiser, pypy-scheduler, docs, flake8
 skipsdist = True
 
 [testenv]
@@ -22,6 +22,8 @@ deps=
   cdh,hdp: hdfs>=2.0.4,<3.0.0
   postgres: psycopg2<3.0
   gcloud: google-api-python-client>=1.4.0,<2.0
+  hdf5: cython
+  hdf5: tables<4.0
   coverage>=4.1,<4.2
   codecov>=1.4.0
   requests<3.0
@@ -46,7 +48,11 @@ setenv =
   COVERAGE_PROCESS_START={toxinidir}/.coveragerc
   FULL_COVERAGE=true
   nonhdfs: NOSE_WITH_DOCTEST=1
+  hdf5: NOSE_ATTR=hdf5
 commands =
+  # ensure pandas is installed after cython
+  hdf5: pip install 'pandas>=0.13'
+;  hdf5: pip install 'tables<4.0'
   cdh,hdp: {toxinidir}/scripts/ci/setup_hadoop_env.sh
   python --version
   coverage run test/runtests.py -v --ignore-files='(^\.|^_|^setup\.py$)' \
