Add support for running mrjob jobs as luigi Tasks.

--- a/tox.ini
+++ b/tox.ini
@@ -23,6 +23,7 @@ deps=
   coverage>=3.6,<3.999
   codecov>=1.4.0
   requests<3.0
+  mrjob>=0.5.2
   unixsocket: requests-unixsocket<1.0
   pygments
   hypothesis[datetime]
