Track ECS container exit codes (#2)
* track exit codes

* only throw on essential containers non-zero

* handle ECS container reason failure, add tests for ECSTask failures

* reorganize task status tracking a bit

* add AWS_DEFAULT_PROFILE env var to tox passthru

--- a/tox.ini
+++ b/tox.ini
@@ -12,6 +12,7 @@ deps=
   nose<2.0
   unittest2<2.0
   boto<3.0
+  boto3>=1.3.1
   sqlalchemy<2.0
   elasticsearch<2.0.0
   psutil<4.0
@@ -27,7 +28,7 @@ deps=
   pygments
   hypothesis[datetime]
 passenv =
-  USER JAVA_HOME POSTGRES_USER DATAPROC_TEST_PROJECT_ID GCS_TEST_PROJECT_ID GCS_TEST_BUCKET GOOGLE_APPLICATION_CREDENTIALS TRAVIS_BUILD_ID TRAVIS TRAVIS_BRANCH TRAVIS_JOB_NUMBER TRAVIS_PULL_REQUEST TRAVIS_JOB_ID TRAVIS_REPO_SLUG TRAVIS_COMMIT CI
+  USER JAVA_HOME POSTGRES_USER DATAPROC_TEST_PROJECT_ID GCS_TEST_PROJECT_ID GCS_TEST_BUCKET GOOGLE_APPLICATION_CREDENTIALS TRAVIS_BUILD_ID TRAVIS TRAVIS_BRANCH TRAVIS_JOB_NUMBER TRAVIS_PULL_REQUEST TRAVIS_JOB_ID TRAVIS_REPO_SLUG TRAVIS_COMMIT CI AWS_DEFAULT_PROFILE
 setenv =
   LC_ALL = en_US.utf-8
   cdh: HADOOP_DISTRO=cdh
