--- a/tox.ini
+++ b/tox.ini
@@ -12,8 +12,8 @@ deps=
   nose<2.0
   unittest2<2.0
   boto<3.0
-  boto3>=1.4.0
-  s3transfer>=0.1.2
+  # boto3>=1.4.0
+  # s3transfer>=0.1.2
   sqlalchemy<2.0
   elasticsearch<2.0.0
   psutil<4.0
