--- a/tox.ini
+++ b/tox.ini
@@ -23,6 +23,7 @@ deps=
   coverage>=4.1,<4.2
   codecov>=1.4.0
   requests<3.0
+  future==0.15.2
   unixsocket: requests-unixsocket<1.0
   pygments
   hypothesis[datetime]
