--- a/.travis.yml
+++ b/.travis.yml
@@ -52,8 +52,6 @@ addons:
   apt:
     packages:
     - libhdf5-serial-dev
-    - libbz2-dev
-    - liblzo2-dev
 
 cache:
   directories:
@@ -63,7 +61,6 @@ install:
   - pip install 'tox<3.0'
 
 before_install:
-  - apt-get install libhdf5-serial-dev
   - openssl aes-256-cbc -K $encrypted_e05f6ccc270e_key -iv $encrypted_e05f6ccc270e_iv -in test/gcloud-credentials.json.enc -out test/gcloud-credentials.json -d
     || export DIDNT_CREATE_GCP_CREDS=1
 
@@ -87,3 +84,4 @@ branches:
   only:
     - master
     - travisbuild
+    - updated_hdf5
