Remove py33 env. Remove verbose flag for tox commands.

--- a/tox.ini
+++ b/tox.ini
@@ -22,6 +22,7 @@ deps=
   gcloud: google-api-python-client>=1.4.0,<2.0
   hdf5: cython
   hdf5: tables<4.0
+  hdf5: pandas>=0.13
   coverage>=4.1,<4.2
   codecov>=1.4.0
   requests<3.0
@@ -48,8 +49,6 @@ setenv =
   nonhdfs: NOSE_WITH_DOCTEST=1
   hdf5: NOSE_ATTR=hdf5
 commands =
-  # ensure pandas is installed after cython
-  hdf5: pip install 'pandas>=0.13'
   cdh,hdp: {toxinidir}/scripts/ci/setup_hadoop_env.sh
   python --version
   coverage run test/runtests.py -v --ignore-files='(^\.|^_|^setup\.py$)' \
